tests/saws/fixtures/invalid/06_duplicate_columns.saws
name,age,name
"Alice",30,"Bob"
